--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
     </div>
    <!-- ---------------------section_2 start------------------------- -->
-   <section id="press" class="bg-white pt-lg-1 pb-md-3 pb-lg-2 pb-xl-1 pt-xl-1 section_margin_bottom my-3">
+   <section id="press" class="bg-white pt-lg-1 pb-md-3 pb-lg-2 pb-xl-1 pt-xl-1 section_mb_minus my-3">
     <div class="coustam_container d-flex justify-content-center pt-md-5 pb-md-5 mt-md-5 mb-md-5">
         <h2 class="advise font_roboto fs_3xl mb-4 text-black mt-5 d-md-none">
             <span class="color_peach">We advise</span>
@@ -129,7 +129,7 @@
     </div>
     </section>
     <!-- Section Real Estate -->
-    <section class="bg-black section_margin_top" id="real">
+    <section class="bg-black section_mt_minus" id="real">
       <div class="custom_container bg-white">
         <div class="row bg-black p-0 mt-5 mt-md-0">
           <div class="col-12 col-md-6 order-1 order-md-0 bg-white p-0 col_margin_left">
@@ -167,7 +167,7 @@
       </div>
     </section>
     <!-- We Deal With -->
-    <section class="pt_150 bg-black section_margin_top">
+    <section class="pt_150 bg-black section_mt_minus">
       <div class="custom_container">
         <div class="row m-0 p-0 align-items-center align-self-xl-start">
           <div class="col-12 col-md-6 p-0 ps-lg-5 pb-md-4 pb-4">
@@ -212,7 +212,7 @@
       </div>
     </section>
     <!-- Construction -->
-    <section class="bg-white overflow-hidden section_margin_top">
+    <section class="bg-white overflow-hidden section_mt_minus">
       <div class="custom_container position-relative">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-6 order-1 order-md-0 pt-lg-4 pt-md-5 mt-md-0 d-flex justify-content-center justify-content-lg-start">
@@ -247,11 +247,11 @@
       </div>
     </section>
     <!-- Litigation -->
-    <section class="padding_top_150 pb-4 pb-md-0 bg-black section_margin_top">
+    <section class="padding_top_150 pb-4 pb-md-0 bg-black section_mt_minus">
       <div class="custom_container pb-4 pb-md-2">
         <div class="row p-lg-5 ps-lg-5 pb_100">
           <div class="col-12 col-md-7 col-lg-6 p-0 ps-md-5">
-          <div class="content p-sm-3 p-4 ps-lg-5 subject text_margin_bottom">
+          <div class="content p-sm-3 p-4 ps-lg-5 subject litigation_text_mb">
             <div class="d-flex align-items-center mt-4 mt-md-0 mt-lg-4">
               <div class="line_heading"></div>
               <p class="fs_xsm Letter_space_03 font_roboto ms-2 color_peach text-uppercase fw_700 font_roboto">
@@ -296,7 +296,7 @@
       </div>
     </section>
     <!-- News -->
-    <section class="bg-white section_margin_top mb-4 pb-3 pb-md-2 pb-lg-5 mb-lg-5 pt-md-5">
+    <section class="bg-white section_mt_minus mb-4 pb-3 pb-md-2 pb-lg-5 mb-lg-5 pt-md-5">
       <div class="custom_container ps-3 ps-md-5">
         <div class="d-md-flex justify-content-between align-items-lg-end">
           <div>
@@ -521,11 +521,11 @@
       </div>
     </section>
     <!-- Milad -->
-    <section class="section_margin_top">
+    <section class="section_mt_minus">
       <div class="custom_container padding_top_150">
-        <div class="row col_border_top bg-black position-relative">
+        <div class="row col_milad_border_top bg-black position-relative">
           <div class="col-md-8 col-lg-7">
-            <div class="section_margin_left">
+            <div class="section_milad_margin_left">
               <img class="img_comma" src="./assets/img/Homepage/svg/inverted-coma.svg" alt="comma_img">
               <h3 class="letter_space_01 font_roboto text-white mt-5 pt-md-4 pt-lg-5 fs_xl line_height_100 fw_700">
                 Milad is an experienced <span class="d-lg-block">litigator and problem solver</span><span class="d-lg-block">who has
@@ -589,14 +589,14 @@
       </div>
     </section>
     <!-- Chery -->
-    <section class="position-relative height_section section_margin_top">
+    <section class="position-relative section_cherry_height section_mt_minus">
       <div class="custom_container">
         <div class="row">
           <div class="col-md-4 col-lg-6 order-1 order-lg-0 col_height">
             <img class="img_cherry d-lg-none" src="./assets/img/Homepage/webp/co-founder2 (1).png" alt="cherry_img">
             <img class="d-none d-lg-block img_cherry_sec" src="./assets/img/Homepage/webp/co-founder2 (1).png" alt="cherry_img">
           </div>
-            <div class="col-md-8 col-lg-6 order-0 order-lg-1 margin_col px-s ps-md-5 ms-md-3 ms-lg-0">
+            <div class="col-md-8 col-lg-6 order-0 order-lg-1 margin_cherry_sect_col px-s ps-md-5 ms-md-3 ms-lg-0">
               <h3 class="letter_cherry_space font_roboto text-black fs_xl line_height_100 fw_700">
                 Cheryl has represented a <span class="d-lg-block">wide variety of clients in</span><span class="d-lg-block">transactional matters, from</span><span class="d-lg-block">individuals and small</span><span class="d-lg-block"> businesses to domestic and</span><span class="d-lg-block">multi-national billion-</span><span class="d-lg-block">dollar companies.</span>
               </h3>
@@ -651,7 +651,7 @@
       </div>
     </section>
     <!-- anything -->
-    <section class="pt-lg-5 pb-lg-5 mx-auto bg-black section_margin_top" id="anything">
+    <section class="pt-lg-5 pb-lg-5 mx-auto bg-black section_mt_minus" id="anything">
       <div class="container main_container mx-auto">
           <div class="row pt-5 pb-5 d-flex justify-content-center align-items-center">
               <div class="col-sm-6 ps-4 ps-md-5 pt-2 pt-xl-3">
@@ -714,7 +714,7 @@
       </div>
   </section>
    <!-- ---------------------footer_start-------------------------- -->
-   <section class="bg-black footer_margin section_margin_top mb-0 position-relative">
+   <section class="bg-black footer_margin section_mt_minus mb-0 position-relative">
     <div class="coustam_container pb-3 pb-md-4 pb-lg-0 pt-xl-2">
         <div class="row justify-content-center justify-content-lg-between text-center">
             <div class="col-lg-1 d-none d-lg-block p-0 ">
