--- a/news.html
+++ b/news.html
@@ -100,7 +100,7 @@
           </div>
     </section>
     <!-- card  -->
-    <section class="bg-white row_border section_margin_top px-5 px-sm-4">
+    <section class="bg-white row_border section_mt_minus px-5 px-sm-4">
         <div class="card_section_container">
             <div class="row row_padding">
               <div class="col-lg-4 p-0 col-sm-6 mb-4 mb-lg-5 d-flex justify-content-center">
@@ -277,7 +277,7 @@
         </div>
     </section>
     <!-- anything -->
-    <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black section_margin_top"  id="anything">
+    <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black section_mt_minus"  id="anything">
       <div class=" container  main_container mx-auto">
           <div class=" row pt-5 pb-5 d-flex justify-content-center align-items-center">
               <div class=" col-sm-6 ps-4 ps-md-5 pt-2 pt-xl-3">
@@ -340,7 +340,7 @@
       </div>
   </section>
    <!-- ---------------------footer_start-------------------------- -->
-   <section class="bg-black footer_margin section_margin_top">
+   <section class="bg-black footer_margin section_mt_minus">
     <div class="coustam_container pb-5 pb-lg-0 pt-xl-2">
         <div class="row justify-content-center justify-content-lg-between text-center">
             <div class="col-lg-1 d-none d-lg-block p-0">
