--- a/team.html
+++ b/team.html
@@ -396,7 +396,7 @@
         </div>
     </section>
     <!-----------------------team page sectthree -->
-    <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black section_margin_top"  id="anything">
+    <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black section_mt_minus"  id="anything">
         <div class=" container  main_container mx-auto pb-lg-3">
             <div class=" row pt-5 pb-5 d-flex justify-content-center align-items-center">
                 <div class=" col-sm-6 ps-4 ps-md-5 pt-2 pt-xxl-4">
@@ -459,7 +459,7 @@
         </div>
     </section>
      <!-- ---------------------footer_start-------------------------- -->
-     <section class="bg-black footer_margin section_margin_top">
+     <section class="bg-black footer_margin section_mt_minus">
         <div class="coustam_container pb-5 pb-lg-0 pt-xl-2">
             <div class="row justify-content-center justify-content-lg-between text-center">
                 <div class="col-lg-1 d-none d-lg-block p-0">
