--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <ul class="sm-screen pt-lg-5 mobile_view ps-xl-0" id="navbar">
                         <li class="nav_links_padding nav_lineh"><a  href="index.html" onclick="openNav()"
-                                class="fs_nav  nav_links font_roboto active">Home</a></li>
+                                class="fs_nav nav_links font_roboto active">Home</a></li>
                         <li class="nav_links_padding nav_line"><a href="#real" onclick="openNav()"
                                 class="fs_nav nav_links font_roboto">Practice
                                 Areas</a></li>
@@ -70,7 +70,7 @@
                     </ul>
                     <div onclick="openNav()" class="menu d-block d-xl-none z_7 pe-2">
                       <span></span>
-                      <span class="my-2"></span>
+                      <span class="my-1"></span>
                       <span></span>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                 We deal with
               </p>
             </div>
-            <h2 class="letter_space_01 text-white font_roboto lht_100 fw_700 fs_3xl mt-3">
+            <h2 class="letter_space_01 text-white font_roboto line_height_100 fw_700 fs_3xl mt-3">
               Business <span class="d-xl-block">& Corporate</span>
               
             </h2>
