--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
                 <div class="col-xl-2">
                    <div class="d-flex justify-content-between align-items-center">
                     <div class=" px-3">
-                        <img class="cursor_pointer team_page_logo mt-4" src="./assets/img/Homepage/svg/logo.svg" alt="logo">
+                        <a href="/"><img class="cursor_pointer team_page_logo mt-4" src="./assets/img/Homepage/svg/logo.svg" alt="logo"></a>
                     </div>
                     <div class=" d-lg-none">
                         <ul class=" sm-screen pt-lg-5 mobile_view" id="navbar">
