--- a/news.html
+++ b/news.html
@@ -39,9 +39,9 @@
                                 class="fs_nav nav_links font_roboto" >Contact</a>
                         </li>
                     </ul>
-                    <div onclick="openNav()" class="menu d-block d-xl-none z_7 pe-2">
+                    <div onclick="openNav()" class="menu d-block d-xl-none z_7 pe-2 position-relative">
                       <span></span>
-                      <span class="my-2"></span>
+                      <span class="my-1"></span>
                       <span></span>
                     </div>
                     </div>
@@ -50,9 +50,9 @@
                 <div class="col-lg-10 p-0">
                   <div class="content d-md-flex m-flex-column justify-content-between">
                     <div class="data pt-3 pt-sm-5 mt-lg-5 subject back_to_home">
-                   <div class="main_hover mt-lg-5 z_7">
+                   <div class="main_hover mt-lg-5 w-75">
                     <a
-                    class="color-peach d-flex align-items-center back_to_top_header"
+                    class="color-peach z_5 position-relative d-flex align-items-center back_to_top_header"
                     href="index.html"
                   >
                     <svg class="icon_back"
@@ -90,7 +90,7 @@
                       </div>
                       <div class="ms-md-auto animation-element bounce-down mt-3 mt-md-0">
                         <img src="./assets/img/news/svg/news-bg.svg" class="desktop subject img_header d-none d-md-block" />
-                        <img src="./assets/img/news/svg/news-bg-mb.svg" class="img_b_news w-75 d-md-none" />
+                        <img src="./assets/img/news/svg/news-bg-mb.svg" class="img_b_news w-100 d-md-none" />
                       </div>
                     </div>
                   </div>
