--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
                         </ul>
                         <div onclick="openNav()" class="menu d-block d-xl-none z_7 pe-2">
                           <span></span>
-                          <span class="my-2"></span>
+                          <span class="my-1"></span>
                           <span></span>
                         </div>
                       </div>
@@ -53,7 +53,7 @@
                     <div>
                         <div class="row px-3">
                             <div class="pt-lg-5 px-3 ">
-                           <div class="main_hover">
+                           <div class="main_hover w-50">
                             <a class=" d-flex align-items-center mt-5"
                             href="index.html">
                             <svg width="51" height="12" class="back" viewBox="0 0 51 12" fill="none"
