--- a/news.html
+++ b/news.html
@@ -330,7 +330,7 @@
                   <br>
                   <input class="form_contact" type="email" name="email" placeholder="Email">
                   <br>
-                  <input class="form_contact" type="phone number" name="phone" placeholder="Phone">
+                  <input class="form_contact" type="number" id="number" min="0" placeholder="Phone">
                   <br>
                   <textarea class="form_contact" type="message" name="message" placeholder="How We Can Help ?"></textarea>
                   <input class="contact_form_btn" type="submit" value="Submit">
