--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
               Purchases and Sales of Commercial and 
                 Residential Properties
             </p>
-            <hr class="grey-hr" />
+            <hr class="grey_hr" />
                 <p class="font_opacity_07 font_16 font_600 lht_100 font_roboto text-black">
                   General Counseling to Cooperatives and
                     Condominiums
                 </p>
-                <hr class="grey-hr" />
+                <hr class="grey_hr" />
                 <p class="font_opacity_07 font_16 font_600 lh_100 font_roboto text-black">Leasing</p>
-                <hr class="grey-hr" />
+                <hr class="grey_hr" />
                 <p class="font_opacity_07 font_16 font_600 lh_100 font_roboto text-black">Syndication</p>
-                <hr class="grey-hr" />
+                <hr class="grey_hr" />
                 <p class="font_opacity_07 font_16 font_600 lh_100 font_roboto text-black">Financing</p>
-                <hr class="grey-hr" />
+                <hr class="grey_hr" />
                 <p class="font_opacity_07 font_16 font_600 lh_100 font_roboto text-black">Loan Work-Outs</p>
            </div>
           </div>
@@ -205,7 +205,7 @@
         </div>
         <div class="col-12 col-md-6 p-0 mt-md-5 pt-5 pt-md-0 mt-lg-0 mt-xl-5 d-flex justify-content-end align-items-end text-end">
           <div class="mt-md-5">
-            <img  src="./assets/img/Homepage/svg/dollar-img.svg" class="img_bussiness" />
+            <img src="./assets/img/Homepage/svg/dollar-img.svg" class="img_bussiness" alt="dollar-img"/>
           </div>
         </div>
         </div>
@@ -230,17 +230,17 @@
             <p class="font_opacity_07 font_16 font_roboto font_600 lh_100 text-black mt-sm-4 mt-1">
               AIA Contracts
             </p>
-            <hr class="grey-hr" />
+            <hr class="grey_hr" />
             <p class="font_opacity_07 font_16 font_roboto font_600 lht_100 text-black">
               Construction and Development 
                 Agreements
             </p>
-            <hr class="grey-hr" />
+            <hr class="grey_hr" />
             <p class="font_opacity_07 font_16 font_roboto font_600 lht_100 text-black">
               Access, License Agreements, and
                 RPAPL 881s
             </p>
-            <hr class="grey-hr" />
+            <hr class="grey_hr" />
             <p class="font_opacity_07 font_16 font_roboto font_600 lh_100 text-black">Mechanic's Liens</p>
           </div>
         </div>
