--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             alt="characters_img">
     </div>
     <nav>
-        <div class="coustom_container pb-xl-3">
+        <div class="custom_container pb-xl-3">
             <div class="row align-content-center">
                 <div 
                     class="col-lg-2 p-xl-5 ps-sm-5 px-md-5 p-lg-4 px-lg-4 mx-lg-3 px-0 d-flex flex-lg-column align-items-center justify-content-between justify-content-lg-start">
@@ -538,7 +538,7 @@
               <p class="letter_space_01 font_roboto lh_100 font_600 text_16 text-white font_opacity_07 mb-3 pt-1">
                 Partner & Co-Founder
               </p>
-              <button class="fs_xsm font_600 font_roboto button_bio text-white">Bio</button>
+              <button class="font_600 font_roboto button_bio text-white">Bio</button>
               <div class="icon_space d-flex">
                   <a href="https://www.linkedin.com/in/miladboddoohi/" target="_blank">
                       <svg class="my_icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
@@ -606,7 +606,7 @@
               <p class="letter_space_01 font_roboto lh_100 font_600 text_16 text-black font_opacity_07 mb-3 pt-2">
                 Partner & Co-Founder
               </p>
-              <button class="fs_xsm font_600 font_roboto button_bio text-white">Bio</button>
+              <button class="font_600 font_roboto button_bio text-white">Bio</button>
               <div class="d-flex mt-5 mt-lg-5">
                 <a class="z-3" href="https://www.linkedin.com/in/miladboddoohi/" target="_blank">
                   <svg class="my_icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
@@ -832,6 +832,7 @@
                 slidesToShow: 1,
                 centerMode: false,
                 variableWidth: true,
+                dots:true,
               },
             },
             {
@@ -840,6 +841,7 @@
                 slidesToShow: 1,
                 centerMode: false,
                 variableWidth: true,
+                dots:true,
               },
             },
             {
@@ -848,6 +850,7 @@
                 slidesToShow: 2,
                 centerMode: false,
                 variableWidth: true,
+                dots:true,
               },
             },
           ],
